layout validation for release v1.0.0

--- a/public/css/event.css
+++ b/public/css/event.css
@@ -33,7 +33,7 @@
 .section-title .title {
   position: relative;
   display: inline-block;
-  background-color: #f7f7f7;
+  background-color: #fafafa;
   color: rgba(0,0,0,0.7);
   font-size: 16px;
   text-transform: uppercase;
