--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -48,10 +48,10 @@
         <!-- <a href="#" class="list-group-item list-group-item-action active">Cras justo odio</a> -->
         <!-- <a href="#" class="list-group-item list-group-item-action">Sul BA Guia</a> -->
         <a href="/eventos" class="list-group-item list-group-item-action">Eventos</a>
-        <a href="/anuncie" class="list-group-item list-group-item-action">Anunciar aqui</a>
+        <!-- <a href="/anuncie" class="list-group-item list-group-item-action">Anunciar aqui</a>
         <a href="/blog" class="list-group-item list-group-item-action">Blog</a>
         <a href="/login" class="list-group-item list-group-item-action">Entrar</a>
-        <a href="/cadastro" class="list-group-item list-group-item-action">Criar conta</a>
+        <a href="/cadastro" class="list-group-item list-group-item-action">Criar conta</a> -->
         <!-- <a href="#" class="list-group-item list-group-item-action disabled">Vestibulum at eros</a> -->
     </div>
 </div>
