--- a/public/css/event.css
+++ b/public/css/event.css
@@ -90,6 +90,15 @@
   content: "\f0ac";
 }
 
+/*
+  ###########################################################
+  ########################################################### MAP
+  ###########################################################
+*/
+#map {
+  height: 240px;
+}
+
 
 /*
   Bootrstap 4 Grid responsive widths
