--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -33,7 +33,7 @@
 <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
 
 <meta property="og:site_name" content="Sul BA Guia">
-<meta property="og:url" content="https://sulbaguia.com.br">
+<meta property="og:url" content="https://sulbaguia.com.br/eventos">
 <meta property="og:title" content="Sul BA Guia" />
 <meta property="og:description" content="Guia de eventos da região sul da Bahia" />
 <meta property="og:image" itemprop="image" content="https://sulbaguia.com.br/img/chinelinho-240.png">
