--- a/src/views/pages/events/part-events-list.ejs
+++ b/src/views/pages/events/part-events-list.ejs
@@ -43,7 +43,7 @@
                 </div>
             </div>
 
-            <div class="slider-container">
+            <div class="slider-container slide-<%=dateIndex%>">
                 <% events[monthDate].forEach(function(event, index) { %>
                     <div class=".col-12 .col-sm-6 .col-md-4 .col-lg-3 .col-xl-3 mb-3">
                         <div class="event ml-2 mr-2">
