--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -26,7 +26,9 @@
                     <a href="/" class="logo"><img src="/img/sulbaguia-logo-h-t.png" alt=""></a>
                 </div>
                 <p class="text-justify">Temos como missão entregar de forma imparcial o conteúdo mais atualizado e completo sobre eventos, programas e serviços do sul e extremo sul da Bahia.</p>
-                <p class="mt-3 mb-3">contato@sulbaguia.com.br</p>
+                <p class="mt-3 mb-3 mail-text">
+                    <a href="mailto:contato@sulbaguia.com.br" target="_blank">contato@sulbaguia.com.br</a>
+                </p>
                 <ul class="contact-social">
                     <!-- <li><a href="#" class="social-facebook"><i class="fab fa-facebook"></i></a></li>
                     <li><a href="#" class="social-instagram"><i class="fab fa-instagram"></i></a></li> -->
@@ -146,10 +148,19 @@
             <!-- </ul> -->
         <!-- </div> -->
         <!-- col-md-pull-8 -->
-        <div class="col-md-8">
-            <div class="footer-copyright">
-                Copyright &copy; <%= moment().format('YYYY') %> Todos os direitos reservados
+        <div class="col-md-12">
+            <div class="footer-support d-flex">
+                <span class="support-title">Parceiros</span>
+                <span class="company" data-toggle="tooltip" data-placement="right" title="Agência Coletiva Digital">
+                    <a href="https://www.instagram.com/agenciacoletivadigital" target="_blank">
+                        <img src="/img/partners/agencia-coletiva-digital.jpg" alt="" srcset="">
+                    </a>
+                </span>
             </div>
+
+            <!-- <div class="footer-copyright">
+                Copyright &copy; <%= moment().format('YYYY') %> Todos os direitos reservados
+            </div> -->
         </div>
     </div>
     <!-- /row -->
